--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "yargs": "^4.8.0"
   },
   "dependencies": {
+    "connect-history-api-fallback": "^1.3.0",
     "express-nunjucks": "^2.0.1",
     "jquery": "^3.1.0",
     "lodash": "^4.14.2",
