--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "build": "gulp",
     "production": "gulp --production",
     "dev": "NODE_ENV='development' node ./app/bin/www --harmony_default_parameters --harmony_destructuring_assignment --harmony_destructuring_bind",
-    "start": "node ./app/bin/www --harmony_default_parameters --harmony_destructuring_assignment --harmony_destructuring_bind",
-    "tests": "mocha --reporter=nyan --recursive --harmony_default_parameters --harmony_destructuring_assignment --harmony_destructuring_bind ./tests"
+    "start": "node ./app/bin/www --harmony_default_parameters --harmony_destructuring_assignment --harmony_destructuring_bind"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.1",
@@ -32,7 +31,6 @@
     "body-parser": "~1.15.1",
     "browser-sync": "^2.13.0",
     "browserify": "^13.1.0",
-    "chai": "^3.5.0",
     "cookie-parser": "~1.4.3",
     "cssnano": "^3.7.3",
     "debug": "~2.2.0",
@@ -56,7 +54,6 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
     "lazypipe": "^1.0.1",
-    "mocha": "^3.1.0",
     "morgan": "~1.7.0",
     "node-bourbon": "^4.2.8",
     "nunjucks": "~2.5.0",
@@ -80,9 +77,7 @@
   "dependencies": {
     "connect-history-api-fallback": "^1.3.0",
     "express-nunjucks": "^2.0.1",
-    "jquery": "^3.1.0",
-    "lodash": "^4.14.2",
-    "moment": "^2.14.1",
+    "moment": "^2.15.1",
     "nunjucks": "^2.5.2",
     "object-assign": "^4.1.0",
     "superagent": "^2.1.0"
